permalinks and icon

--- a/_posts/2020-10-20-welcome.md
+++ b/_posts/2020-10-20-welcome.md
@@ -5,6 +5,7 @@ description: An introduction to my website
 subject: miscellaneous
 readtime: 2
 layout: blogpost
+permalink: /blogs/10-10-2020-welcome/
 ---
 <div class="blog-post-header">
 <h1>{{ page.title }}</h1>
