--- a/_posts/2020-10-20-welcome.md
+++ b/_posts/2020-10-20-welcome.md
@@ -5,15 +5,15 @@ description: An introduction to my website
 subject: miscellaneous
 readtime: 2
 layout: blogpost
-permalink: /blogs/10-10-2020-welcome/
+# permalink: /blogs/10-10-2020-welcome/
 ---
-<div class="blog-post-header">
+<!-- <div class="blog-post-header">
 <h1>{{ page.title }}</h1>
 <h2> {{ page.description }}</h2>
 <h3 id="subject"><b>Subject</b>: {{ page.subject }}</h3>
 <h3>{{ page.readtime }} min read</h3>
 <h3>{{ page.date | date: '%B %d, %Y'}}</h3>
-</div> 
+</div>  -->
 Hello visitors!
 
 Thank you for taking the time to visit my new website!
